Add Checkstyle config and fix warnings